testdata/baselines/reference/submodule/conformance/commonJSImportExportedClassExpression.errors.txt
main.js(3,12): error TS7006: Parameter 'k' implicitly has an 'any' type.


==== main.js (1 errors) ====
    const { K } = require("./mod1");
    /** @param {K} k */
    function f(k) {
               ~
!!! error TS7006: Parameter 'k' implicitly has an 'any' type.
        k.values()
    }
    
==== mod1.js (0 errors) ====
    exports.K = class K {
        values() {
        }
    };
    